Homeworks/pythonProject/gen/JavaLikeParser.py
# Generated from D:/Bahareh/7/Files/Compiler/Git/Compiler-Design/Homeworks/pythonProject/JavaLike.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JavaLikeParser ( Parser ):

    grammarFileName = "JavaLike.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "';'", "'('", 
                     "')'", "','", "'int'", "'boolean'", "'if'", "'else'", 
                     "'while'", "'for'", "'+'", "'-'", "'*'", "'/'", "'<'", 
                     "'>'", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "INT", "BOOL", "WS" ]

    RULE_program = 0
    RULE_classDef = 1
    RULE_classMember = 2
    RULE_fieldDecl = 3
    RULE_methodDecl = 4
    RULE_paramList = 5
    RULE_paramDecl = 6
    RULE_typeVar = 7
    RULE_block = 8
    RULE_statement = 9
    RULE_expressionStmt = 10
    RULE_selectionStmt = 11
    RULE_iterationStmt = 12
    RULE_expr = 13
    RULE_op = 14
    RULE_intLiteral = 15
    RULE_boolLiteral = 16

    ruleNames =  [ "program", "classDef", "classMember", "fieldDecl", "methodDecl", 
                   "paramList", "paramDecl", "typeVar", "block", "statement", 
                   "expressionStmt", "selectionStmt", "iterationStmt", "expr", 
                   "op", "intLiteral", "boolLiteral" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    ID=22
    INT=23
    BOOL=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDef(self):
            return self.getTypedRuleContext(JavaLikeParser.ClassDefContext,0)


        def EOF(self):
            return self.getToken(JavaLikeParser.EOF, 0)

        def getRuleIndex(self):
            return JavaLikeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JavaLikeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.classDef()
            self.state = 35
            self.match(JavaLikeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JavaLikeParser.ID, 0)

        def classMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaLikeParser.ClassMemberContext)
            else:
                return self.getTypedRuleContext(JavaLikeParser.ClassMemberContext,i)


        def getRuleIndex(self):
            return JavaLikeParser.RULE_classDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDef" ):
                listener.enterClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDef" ):
                listener.exitClassDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDef" ):
                return visitor.visitClassDef(self)
            else:
                return visitor.visitChildren(self)




    def classDef(self):

        localctx = JavaLikeParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(JavaLikeParser.T__0)
            self.state = 38
            self.match(JavaLikeParser.ID)
            self.state = 39
            self.match(JavaLikeParser.T__1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4195072) != 0):
                self.state = 40
                self.classMember()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(JavaLikeParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldDecl(self):
            return self.getTypedRuleContext(JavaLikeParser.FieldDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(JavaLikeParser.MethodDeclContext,0)


        def getRuleIndex(self):
            return JavaLikeParser.RULE_classMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassMember" ):
                listener.enterClassMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassMember" ):
                listener.exitClassMember(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassMember" ):
                return visitor.visitClassMember(self)
            else:
                return visitor.visitChildren(self)




    def classMember(self):

        localctx = JavaLikeParser.ClassMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classMember)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.fieldDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.methodDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeVar(self):
            return self.getTypedRuleContext(JavaLikeParser.TypeVarContext,0)


        def ID(self):
            return self.getToken(JavaLikeParser.ID, 0)

        def getRuleIndex(self):
            return JavaLikeParser.RULE_fieldDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDecl" ):
                listener.enterFieldDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldDecl" ):
                listener.exitFieldDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldDecl" ):
                return visitor.visitFieldDecl(self)
            else:
                return visitor.visitChildren(self)




    def fieldDecl(self):

        localctx = JavaLikeParser.FieldDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fieldDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.typeVar()
            self.state = 53
            self.match(JavaLikeParser.ID)
            self.state = 54
            self.match(JavaLikeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeVar(self):
            return self.getTypedRuleContext(JavaLikeParser.TypeVarContext,0)


        def ID(self):
            return self.getToken(JavaLikeParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(JavaLikeParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(JavaLikeParser.ParamListContext,0)


        def getRuleIndex(self):
            return JavaLikeParser.RULE_methodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecl" ):
                listener.enterMethodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecl" ):
                listener.exitMethodDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecl" ):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = JavaLikeParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.typeVar()
            self.state = 57
            self.match(JavaLikeParser.ID)
            self.state = 58
            self.match(JavaLikeParser.T__4)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4195072) != 0):
                self.state = 59
                self.paramList()


            self.state = 62
            self.match(JavaLikeParser.T__5)
            self.state = 63
            self.match(JavaLikeParser.T__1)
            self.state = 64
            self.block()
            self.state = 65
            self.match(JavaLikeParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaLikeParser.ParamDeclContext)
            else:
                return self.getTypedRuleContext(JavaLikeParser.ParamDeclContext,i)


        def getRuleIndex(self):
            return JavaLikeParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = JavaLikeParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.paramDecl()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 68
                self.match(JavaLikeParser.T__6)
                self.state = 69
                self.paramDecl()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeVar(self):
            return self.getTypedRuleContext(JavaLikeParser.TypeVarContext,0)


        def ID(self):
            return self.getToken(JavaLikeParser.ID, 0)

        def getRuleIndex(self):
            return JavaLikeParser.RULE_paramDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamDecl" ):
                listener.enterParamDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamDecl" ):
                listener.exitParamDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamDecl" ):
                return visitor.visitParamDecl(self)
            else:
                return visitor.visitChildren(self)




    def paramDecl(self):

        localctx = JavaLikeParser.ParamDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.typeVar()
            self.state = 76
            self.match(JavaLikeParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JavaLikeParser.ID, 0)

        def getRuleIndex(self):
            return JavaLikeParser.RULE_typeVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeVar" ):
                listener.enterTypeVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeVar" ):
                listener.exitTypeVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeVar" ):
                return visitor.visitTypeVar(self)
            else:
                return visitor.visitChildren(self)




    def typeVar(self):

        localctx = JavaLikeParser.TypeVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeVar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4195072) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaLikeParser.StatementContext)
            else:
                return self.getTypedRuleContext(JavaLikeParser.StatementContext,i)


        def getRuleIndex(self):
            return JavaLikeParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = JavaLikeParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 29373440) != 0):
                self.state = 80
                self.statement()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionStmt(self):
            return self.getTypedRuleContext(JavaLikeParser.ExpressionStmtContext,0)


        def selectionStmt(self):
            return self.getTypedRuleContext(JavaLikeParser.SelectionStmtContext,0)


        def iterationStmt(self):
            return self.getTypedRuleContext(JavaLikeParser.IterationStmtContext,0)


        def getRuleIndex(self):
            return JavaLikeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = JavaLikeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22, 23, 24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.expressionStmt()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.selectionStmt()
                pass
            elif token in [12, 13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.iterationStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(JavaLikeParser.ExprContext,0)


        def getRuleIndex(self):
            return JavaLikeParser.RULE_expressionStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStmt" ):
                listener.enterExpressionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStmt" ):
                listener.exitExpressionStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStmt" ):
                return visitor.visitExpressionStmt(self)
            else:
                return visitor.visitChildren(self)




    def expressionStmt(self):

        localctx = JavaLikeParser.ExpressionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expressionStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.expr(0)
            self.state = 92
            self.match(JavaLikeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(JavaLikeParser.ExprContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaLikeParser.StatementContext)
            else:
                return self.getTypedRuleContext(JavaLikeParser.StatementContext,i)


        def getRuleIndex(self):
            return JavaLikeParser.RULE_selectionStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectionStmt" ):
                listener.enterSelectionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectionStmt" ):
                listener.exitSelectionStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectionStmt" ):
                return visitor.visitSelectionStmt(self)
            else:
                return visitor.visitChildren(self)




    def selectionStmt(self):

        localctx = JavaLikeParser.SelectionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_selectionStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(JavaLikeParser.T__9)
            self.state = 95
            self.match(JavaLikeParser.T__4)
            self.state = 96
            self.expr(0)
            self.state = 97
            self.match(JavaLikeParser.T__5)
            self.state = 98
            self.statement()
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 99
                self.match(JavaLikeParser.T__10)
                self.state = 100
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterationStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaLikeParser.ExprContext)
            else:
                return self.getTypedRuleContext(JavaLikeParser.ExprContext,i)


        def statement(self):
            return self.getTypedRuleContext(JavaLikeParser.StatementContext,0)


        def getRuleIndex(self):
            return JavaLikeParser.RULE_iterationStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterationStmt" ):
                listener.enterIterationStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterationStmt" ):
                listener.exitIterationStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIterationStmt" ):
                return visitor.visitIterationStmt(self)
            else:
                return visitor.visitChildren(self)




    def iterationStmt(self):

        localctx = JavaLikeParser.IterationStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_iterationStmt)
        self._la = 0 # Token type
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(JavaLikeParser.T__11)
                self.state = 104
                self.match(JavaLikeParser.T__4)
                self.state = 105
                self.expr(0)
                self.state = 106
                self.match(JavaLikeParser.T__5)
                self.state = 107
                self.statement()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(JavaLikeParser.T__12)
                self.state = 110
                self.match(JavaLikeParser.T__4)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0):
                    self.state = 111
                    self.expr(0)


                self.state = 114
                self.match(JavaLikeParser.T__3)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0):
                    self.state = 115
                    self.expr(0)


                self.state = 118
                self.match(JavaLikeParser.T__3)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0):
                    self.state = 119
                    self.expr(0)


                self.state = 122
                self.match(JavaLikeParser.T__5)
                self.state = 123
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JavaLikeParser.ID, 0)

        def intLiteral(self):
            return self.getTypedRuleContext(JavaLikeParser.IntLiteralContext,0)


        def boolLiteral(self):
            return self.getTypedRuleContext(JavaLikeParser.BoolLiteralContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaLikeParser.ExprContext)
            else:
                return self.getTypedRuleContext(JavaLikeParser.ExprContext,i)


        def op(self):
            return self.getTypedRuleContext(JavaLikeParser.OpContext,0)


        def getRuleIndex(self):
            return JavaLikeParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JavaLikeParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.state = 127
                self.match(JavaLikeParser.ID)
                pass
            elif token in [23]:
                self.state = 128
                self.intLiteral()
                pass
            elif token in [24]:
                self.state = 129
                self.boolLiteral()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 138
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = JavaLikeParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 132
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 133
                    self.op()
                    self.state = 134
                    self.expr(2) 
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class OpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JavaLikeParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)




    def op(self):

        localctx = JavaLikeParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4177920) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(JavaLikeParser.INT, 0)

        def getRuleIndex(self):
            return JavaLikeParser.RULE_intLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntLiteral" ):
                listener.enterIntLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntLiteral" ):
                listener.exitIntLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntLiteral" ):
                return visitor.visitIntLiteral(self)
            else:
                return visitor.visitChildren(self)




    def intLiteral(self):

        localctx = JavaLikeParser.IntLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_intLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(JavaLikeParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(JavaLikeParser.BOOL, 0)

        def getRuleIndex(self):
            return JavaLikeParser.RULE_boolLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolLiteral" ):
                listener.enterBoolLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolLiteral" ):
                listener.exitBoolLiteral(self)
